--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -5,7 +5,7 @@
 <section class="left-column">
   <section class="user-profile-box">
     <%= (render "user_details", user: @subject) if @subject.is_a?(User) %>
-    <%= (render "city_details", city: @subject) if @subject.is_a?(City) %>
+    <%= (render "zip_code_details", zip_code: @subject) if @subject.is_a?(City) %>
   </section>
 </section>
 
