--- a/app/views/photos/OLDshow.html.erb
+++ b/app/views/photos/OLDshow.html.erb
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-  Taken in <%= @photo.city.name %> at <%= friendly_time_format(@photo.created_at) %>
+  Taken in <%= @photo.zip_code.city %> at <%= friendly_time_format(@photo.created_at) %>
 </p>
 
 <p>
