--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -13,13 +13,13 @@
 
 
 <section class="main-columns">
-  <section class="city-picker">
-    <%= render "cities/city_picker", cities: @cities %>
+  <section class="zip_code-picker">
+    <%= render "zip_codes/zip_code_picker", zip_codes: @zip_codes %>
   </section>
 
   <section class="middle-column">
     <section class="edit-photo-form">
-      <%= render "details", mode: :edit, cities: @cities, photo: @photo %>
+      <%= render "details", mode: :edit, zip_codes: @zip_codes, photo: @photo %>
     </section>
   </section>
 </div>
