--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -8,6 +8,6 @@
 
 <section class="main-column">
   <section class="new-photo-form">
-    <%= render "details", mode: :new, cities: @cities, photo: @photo %>
+    <%= render "details", mode: :new, zip_codes: @zip_codes, photo: @photo %>
   </section>
 </section>
