--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
 <h1>Welcome, <%= @user.user_name %></h1>
 
 <p>
-  Your favorite cities:
+  Your favorite zip_codes:
   <ul>
-    <% @user.favorite_cities.each do |city| %>
-      <li><%= render "cities/current_weather_summary", city: city %></li>
+    <% @user.favorite_zip_codes.each do |zip_code| %>
+      <li><%= render "zip_codes/current_weather_summary", zip_code: zip_code %></li>
     <% end %>
   </ul>
 </p>
