--- a/app/views/weather_reports/new.html.erb
+++ b/app/views/weather_reports/new.html.erb
@@ -4,6 +4,6 @@
 
 <section class="main-column">
   <section class="new-weather-report-form">
-    <%= render "new", cities: @cities, weather_conditions: @weather_conditions %>
+    <%= render "new", zip_codes: @zip_codes, weather_conditions: @weather_conditions %>
   </section>
 </section>
