--- a/app/views/galleries/_user_details.html.erb
+++ b/app/views/galleries/_user_details.html.erb
@@ -7,7 +7,7 @@
 </p>
 
 <p>
-  <%= link_to user.home_city.name, city_url(user.home_city_id) if !!user.home_city_id %>
+  <%= link_to user.home_zip_code.city, zip_code_url(user.home_zip_code_id) if !!user.home_zip_code_id %>
 </p>
 
 <p>
