--- a/app/views/photos/_details.html.erb
+++ b/app/views/photos/_details.html.erb
@@ -19,13 +19,13 @@
   </p>
 
   <p>
-    <label for="city_id">City</label>
-    <select name="photo[city_id]" id="city_id">
-      <% cities.each do |city| %>
+    <label for="zip_code_id">City</label>
+    <select name="photo[zip_code_id]" id="zip_code_id">
+      <% zip_codes.each do |zip_code| %>
         <option
-          value="<%= city.id %>"
-          <%= "selected" if current_user.try(:home_city_id) == city.id %>>
-          <%= city.name %>
+          value="<%= zip_code.id %>"
+          <%= "selected" if current_user.try(:home_zip_code_id) == zip_code.id %>>
+          <%= zip_code.city %>
         </option>
       <% end %>
     </select>
