--- a/app/views/weather_reports/_new.html.erb
+++ b/app/views/weather_reports/_new.html.erb
@@ -4,7 +4,7 @@
 
 <form class="input" action="<%= weather_reports_url %>" method="post">
 
-  <%= insert_form_authenticity_token %>
+  <%= insert_form_authentizip_code_token %>
 
     <input
       type="number"
@@ -44,13 +44,13 @@
 
 
 
-    <label for="city">City</label>
-    <select name="weather_report[city_id]" id="city">
-      <% cities.each do |city| %>
+    <label for="zip_code">City</label>
+    <select name="weather_report[zip_code_id]" id="zip_code">
+      <% zip_codes.each do |zip_code| %>
         <option
-          value="<%= city.id %>"
-          <%= "selected" if @weather_report.try(&:city_id) == city.id %>>
-          <%= city.name %>
+          value="<%= zip_code.id %>"
+          <%= "selected" if @weather_report.try(&:zip_code_id) == zip_code.id %>>
+          <%= zip_code.city %>
         </option>
       <% end %>
     </select>
