--- a/app/views/users/_details.html.erb
+++ b/app/views/users/_details.html.erb
@@ -1,6 +1,7 @@
 <!-- app/views/users/_details.html.erb -->
 <% action_url = (mode == :new ? users_url : user_url(@user)) %>
 
+
 <form
   action="<%= action_url %>"
   method="post"
@@ -37,16 +38,12 @@
       name="user[password_confirmation]"
       id="password_confirmation">
 
-    <label for="home_zip_code_id">Home City</label>
-    <select name="user[home_zip_code_id]" id="home_zip_code_id">
-      <% @zip_codes.each do |zip_code| %>
-        <option
-          value="<%= zip_code.id %>"
-          <%= "selected" if @user.try(:home_zip_code_id) == zip_code.id %>>
-          <%= zip_code.city %>
-        </option>
-      <% end %>
-    </select>
+    <label for="home_zip_code_code_for_user">Home Zip Code</label>
+    <input
+      type="text"
+      name="home_zip_code_code_for_user"
+      value="<%= @user.try(:home_zip_code).try(:zip_code) %>"
+      id="home_zip_code_code_for_user">
 
     <label>Temperature Scale</label>
       <br>
@@ -89,18 +86,18 @@
 
     Favorite Cities:
     <br>
-    <input type="hidden" name="user[favorite_zip_code_ids][]" value=" ">
-    <% @zip_codes.each do |zip_code| %>
+    <!-- <input type="hidden" name="user[favorite_zip_code_ids][]" value=" ">
+    <%# @zip_codes.each do |zip_code| %>
     <input
       type="checkbox"
       name="user[favorite_zip_code_ids][]"
-      value="<%= zip_code.id %>"
-      id="zip_code_checkbox_<%= zip_code.id %>"
-      <%= "checked" if @user.try(:favorite_zip_code_ids) && @user.favorite_zip_code_ids.include?(zip_code.id) %>
+      value="<%#= zip_code.id %>"
+      id="zip_code_checkbox_<%#= zip_code.id %>"
+      <%#= "checked" if @user.try(:favorite_zip_code_ids) && @user.favorite_zip_code_ids.include?(zip_code.id) %>
       >
-    <label for="zip_code_checkbox_<%= zip_code.id %>"><%= zip_code.city %></label>
+    <label for="zip_code_checkbox_<%#= zip_code.id %>"><%#= zip_code.city %></label>
     <br>
-    <% end %>
+    <%# end %> -->
 
 
   <% if mode == :edit %>
