--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -6,6 +6,7 @@
   <section class="user-profile-box">
     <%= (render "user_details", user: @subject) if @subject.is_a?(User) %>
     <%= (render "zip_code_details", zip_code: @subject) if @subject.is_a?(ZipCode) %>
+    &nbsp;
   </section>
 </section>
 
