--- a/app/views/zip_codes/_current_weather_summary.html.erb
+++ b/app/views/zip_codes/_current_weather_summary.html.erb
@@ -7,7 +7,16 @@
   </figure>
 
   <section class="stats">
-    <%= link_to zip_code.city, zip_code_url(zip_code) %>
+    <%= link_to zip_code.city, zip_code_url(zip_code) %> <a
+    href="#"
+    data-remote="true"
+    class="favorite <% if signed_in? && current_user.favorite_zip_code_ids.include?(zip_code.id) %>
+      <%= true %>
+    <% else %>
+      <%= false %>
+    <% end %>">
+    &#9733;
+  </a>
     <br>
     <%= zip_code.current_temperature(current_user.try(:celsius)) %> &deg;
     <%= current_user.try(:celsius) ? "C" : "F" %>
@@ -15,3 +24,41 @@
   </section>
 
 </section>
+
+<script type="text/javascript" charset="utf-8">
+  var changeStarToFavorited = function (element) {
+    $(element).addClass("true");
+    $(element).removeClass("false");
+    console.log("star is now favorited");
+  };
+
+  var changeStarToUnfavorited = function (element) {
+    $(element).removeClass("true");
+    $(element).addClass("false");
+    console.log("star is now un-favorited");
+  };
+
+  $(document).ready(function(){
+    $(".favorite-form").addClass("hidden");
+
+    $(".current-weather-summary").on("click","a.favorite", function(event) {
+      event.preventDefault();
+      console.log("clicked the favorite star");
+      var that = this;
+
+      if ($(this).hasClass("true")) {
+          $.ajax({
+            url: '<%= modify_favorite_zip_code_links_url + "?zip_code_id=#{zip_code.id}" %>',
+            type: "DELETE",
+            success: changeStarToUnfavorited(that)
+          });
+      } else {
+          $.ajax({
+            url: '<%= modify_favorite_zip_code_links_url + "?zip_code_id=#{zip_code.id}" %>',
+            type: "POST",
+            success: changeStarToFavorited(that)
+          });
+      };
+    });
+  });
+</script>
