--- a/app/views/zip_codes/_current_weather_summary.html.erb
+++ b/app/views/zip_codes/_current_weather_summary.html.erb
@@ -27,15 +27,25 @@
 
 <script type="text/javascript" charset="utf-8">
   var changeStarToFavorited = function (element) {
+    console.log("about to add favorite")
+    console.log(element);
+
     $(element).addClass("true");
     $(element).removeClass("false");
+
     console.log("star is now favorited");
+    console.log(element);
   };
 
   var changeStarToUnfavorited = function (element) {
+    console.log("about to remove favorite")
+    console.log(element);
+
     $(element).removeClass("true");
     $(element).addClass("false");
+
     console.log("star is now un-favorited");
+    console.log(element);
   };
 
   $(document).ready(function(){
@@ -44,20 +54,23 @@
     $(".current-weather-summary").on("click","a.favorite", function(event) {
       event.preventDefault();
       console.log("clicked the favorite star");
+      console.log(this)
       var that = this;
 
       if ($(this).hasClass("true")) {
-          $.ajax({
-            url: '<%= modify_favorite_zip_code_links_url + "?zip_code_id=#{zip_code.id}" %>',
-            type: "DELETE",
-            success: changeStarToUnfavorited(that)
-          });
+        console.log("the star was favorited, now sending unfavorite request");
+        $.ajax({
+          url: '<%= modify_favorite_zip_code_links_url + "?zip_code_id=#{zip_code.id}" %>',
+          type: "DELETE",
+          success: changeStarToUnfavorited(that)
+        });
       } else {
-          $.ajax({
-            url: '<%= modify_favorite_zip_code_links_url + "?zip_code_id=#{zip_code.id}" %>',
-            type: "POST",
-            success: changeStarToFavorited(that)
-          });
+        console.log("the star was not favorited; now sending favorite request");
+        $.ajax({
+          url: '<%= modify_favorite_zip_code_links_url + "?zip_code_id=#{zip_code.id}" %>',
+          type: "POST",
+          success: changeStarToFavorited(that)
+        });
       };
     });
   });
