Adds view template for combined weather and photo post form.

--- a/app/assets/stylesheets/basic_layout.css
+++ b/app/assets/stylesheets/basic_layout.css
@@ -268,15 +268,37 @@ header .nav-bar-dropdown input[type="text"] {
 h2.page-title{
   font-size:24pt;
   font-weight:bold;
-  margin-bottom:20px;
+  margin-top:10px;
+  margin-bottom:10px;
 }
 
 h3.section-title {
   font-size:20pt;
   font-weight:bold;
+  margin-top:10px;
+  margin-bottom:5px;
 }
 
+/*------------- MODAL STYLES -------------------------*/
 
+.has-active-modal .modal {
+  display:block;
+}
+
+.modal {
+  display:none;
+  position:absolute;
+  top: 0;
+}
+
+.modal:before {
+  content:"";
+  display:block;
+  position:fixed;
+  width:100%;
+  height:100%;
+  background: rgba(0,0,0,0.5);
+}
 
 /*------------- JONATHAN'S FORM STYLES --------------*/
 
