--- a/app/assets/stylesheets/basic_layout.css
+++ b/app/assets/stylesheets/basic_layout.css
@@ -7,6 +7,9 @@ body {
   background:linen;
 }
 
+a:hover {
+  text-decoration:underline;
+}
 
 img.avatar {
   height:15px;
@@ -288,7 +291,10 @@ h3.section-title {
 .modal {
   display:none;
   position:absolute;
-  top: 0;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
 }
 
 .modal:before {
