--- a/app/views/weather_reports/_new_with_photo.html.erb
+++ b/app/views/weather_reports/_new_with_photo.html.erb
@@ -2,7 +2,7 @@
 
 <form
   class="input combined"
-  action="<%= combined_post_url %>"
+  action="<%= weather_reports_url %>"
   method="post"
   enctype="multipart/form-data">
 
@@ -52,13 +52,13 @@
   <section class="photo">
     <h3 class="section-title">New Photo</h3>
 
-    <%= image_tag photo.try(:image).try(:url, :small) %>
+    <%#= image_tag photo.try(:image).try(:url, :small) %>
     <br>
     <label for="image">Choose a Photo</label>
     <input type="file" name="photo[image]" value="" id="image">
 
     <label for="caption">Caption</label>
-    <textarea name="photo[caption]" id="caption"><%= photo.try(:caption) %></textarea>
+    <textarea name="photo[caption]" id="caption"><%#= photo.try(:caption) %></textarea>
 
     Tags:
     <br>
@@ -81,9 +81,10 @@
     <input
       type="text"
       name="zip_code_for_weather_report"
-      value="<%= @weather_report.try(:zip_code).try(:zip_code) %>"
+      value="<%= current_user.try(:home_zip_code).try(:zip_code) %>"
       id="zip_code_code"
       placeholder="Zip Code">
-    <input type="submit" value="Post">
+
+    <input class="submit" type="submit" value="Post">
   </section>
 </form>
